force-app/main/default/objects/Order__c/fields/DeliverDate__c.field-meta.xml
<CustomField>
    <fullName>DeliverDate__c</fullName>
    <description>The date on which the order has been delivered.</description>
    <label>Delivered Date</label>
    <type>Date</type>
</CustomField>