force-app/main/default/objects/Order__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COD</fullName>
            </value>
            <value>
                <fullName>Net Banking</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>EMI</fullName>
            </value>
            <value>
                <fullName>Wallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>