force-app/main/default/objects/Order__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Status of the Payment for the order</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAID</fullName>
            </value>
            <value>
                <fullName>COD</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>EMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>