force-app/main/default/objects/Order__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <description>Shipping Address of the Order.</description>
    <label>Shipping Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>