force-app/main/default/objects/Order__c/validationRules/Customer_must_be_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_must_be_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Customer__c)</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>While Creating/updating the Order Record, Customer Must be required to select.</errorMessage>
</ValidationRule>