force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TotalItems__c</columns>
    <columns>Total__c</columns>
    <columns>Status__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>AmountPaid__c</columns>
    <columns>OrderDate__c</columns>
    <columns>Customer__c</columns>
    <columns>AccountName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>